--- a/.github/workflows/run-data-pipeline.yml
+++ b/.github/workflows/run-data-pipeline.yml
@@ -4,7 +4,6 @@ on:
     push:
         branches-ignore:
             - "master"
-    pull_request:
 
 jobs:
     run-pipeline:
@@ -12,7 +11,7 @@ jobs:
 
         steps:
             - uses: actions/checkout@v2
-            - name: Install
+            - name: Install data pipeline
               run: |
                 sudo apt install python3.8
                 python3.8 -m pip install setuptools
@@ -28,3 +27,10 @@ jobs:
                 git add -A
                 git commit -m "Update generated data with data-pipeline"
                 git push
+            - name: Install data compliance check
+              run: |
+                python3 -m pip install setuptools
+                python3 -m pip install goodtables
+            - name: Test
+              run: |
+                python3 -m goodtables ddionrails/datapackage.json
