--- a/.github/workflows/run-data-pipeline.yml
+++ b/.github/workflows/run-data-pipeline.yml
@@ -19,14 +19,6 @@ jobs:
             - name: Process Data
               run: |
                 python3.8 -m paneldata_pipeline -i metadata/ -o ddionrails/ -s twinlife -w ${{ secrets.study_version }} -g -u
-            - name: update file and push to remote
-              run: |
-                git config --global user.name "GitHub Action"
-                git config --global user.email "github-actions@users.noreply.github.com"
-
-                git add -A
-                git commit -m "Update generated data with data-pipeline"
-                git push
             - name: Install data compliance check
               run: |
                 python3 -m pip install setuptools
@@ -34,3 +26,32 @@ jobs:
             - name: Test
               run: |
                 python3 -m goodtables ddionrails/datapackage.json
+            - name: Update file and push to remote
+              run: |
+                echo "Stage new files."
+                (IFS=$'\n'
+                for file in $(git ls-files --others --exclude-standard)
+                  do
+                    git add $file
+                    echo "Staging " $file 
+                done)
+                echo "Stage changed files."
+                (IFS=$'\n'
+                for file in $(git diff-index --name-only HEAD)
+                  do
+                    git add $file
+                    echo "Staging " $file 
+                done)
+                CHANGES_TO_COMMIT=$(git diff --name-only --cached | wc -w)
+                if [ "$CHANGES_TO_COMMIT" -gt 0 ]
+                then 
+                  echo "Commit changes."
+                  git config --global user.name "GitHub Action"
+                  git config --global user.email "github-actions@users.noreply.github.com"
+
+                  git commit -m "Update generated data with data-pipeline"
+                  git push
+                else
+                  echo "No changes to commit."
+                  exit 0
+                fi
